Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35046

SIGSEGV in list_delete in optimized builds when using pseudo_slave_mode

    XMLWordPrintable

Details

    • Can result in hang or crash
    • The fixed version is restored. If any underfixing exists it should reported/fixed separately.

    Description

      SET pseudo_slave_mode=1;
      CREATE TABLE t1 (c INT);
      CREATE TABLE t2 (c INT) ENGINE=MEMORY; 
      XA START 'a';
      INSERT INTO t1 VALUES (0);  
      CREATE TEMPORARY TABLE t1 (c INT);
      INSERT INTO t1 VALUES (0);
      XA END 'a';
      XA PREPARE 'a';
      OPTIMIZE TABLE t1;
      LOCK TABLE t2 READ;
      XA COMMIT 'a';
      SHUTDOWN;
      

      Leads to:

      CS 11.7.0 5bbda9711131845ae6b4315a268b4d1710943a85 (Optimized)

      Core was generated by `/test/MD090924-mariadb-11.7.0-linux-x86_64-opt/bin/mariadbd --no-defaults --max'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  list_delete (root=0x1496dc04a7b0, element=element@entry=0x1496dc04a7b0)at /test/server_opt/mysys/list.c:48
       
      [Current thread is 1 (LWP 2118510)]
      (gdb) bt
      #0  list_delete (root=0x1496dc04a7b0, element=element@entry=0x1496dc04a7b0)at /test/server_opt/mysys/list.c:48
      #1  0x00005585f6ba5e6d in hp_close (info=0x1496dc04a4e8)at /test/server_opt/storage/heap/hp_close.c:40
      #2  heap_close (info=0x1496dc04a4e8)at /test/server_opt/storage/heap/hp_close.c:28
      #3  0x00005585f66ee459 in closefrm (table=table@entry=0x1496dc056318)at /test/server_opt/sql/table.cc:4786
      #4  0x00005585f6800e33 in intern_close_table (table=0x1496dc056318)at /test/server_opt/sql/table_cache.cc:230
      #5  tc_purge () at /test/server_opt/sql/table_cache.cc:324
      #6  0x00005585f6570882 in purge_tables ()at /test/server_opt/sql/sql_base.cc:333
      #7  0x00005585f67ff7b1 in tdc_start_shutdown ()at /test/server_opt/sql/table_cache.cc:651
      #8  0x00005585f64ce21b in clean_up (print_message=true)at /test/server_opt/sql/mysqld.cc:2005
      #9  clean_up (print_message=<optimized out>)at /test/server_opt/sql/mysqld.cc:1970
      #10 0x00005585f64d9ed2 in mysqld_main (argc=<optimized out>, argv=<optimized out>) at /test/server_opt/sql/mysqld.cc:6192
      #11 0x000014974502a1ca in __libc_start_call_main (main=main@entry=0x5585f648b910 <main(int, char**)>, argc=argc@entry=11, argv=argv@entry=0x7ffe9fddbd18)at ../sysdeps/nptl/libc_start_call_main.h:58
      #12 0x000014974502a28b in __libc_start_main_impl (main=0x5585f648b910 <main(int, char**)>, argc=11, argv=0x7ffe9fddbd18, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffe9fddbd08) at ../csu/libc-start.c:360
      #13 0x00005585f64cc915 in _start ()
      

      Bug confirmed present in:
      MariaDB: 11.2.6 (opt), 11.4.4 (opt), 11.6.2 (opt), 11.7.0 (opt)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.5.27 (dbg), 10.5.27 (opt), 10.6.20 (dbg), 10.6.20 (opt), 10.11.10 (dbg), 10.11.10 (opt), 11.2.6 (dbg), 11.4.4 (dbg), 11.6.2 (dbg), 11.7.0 (dbg)
      MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.51 (dbg), 5.6.51 (opt), 5.7.44 (dbg), 5.7.44 (opt)

      Attachments

        Issue Links

          Activity

            People

              Elkin Andrei Elkin
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 8d 3h 20m
                  8d 3h 20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.